@@ -1,3 +1,12 @@
+2010-04-13  Stefan Kost  <ensonic@users.sf.net>
+
+	patch by: Sebastian Dröge <slomo@circular-chaos.org>
+
+	* src/BuzzMachineLoader/Makefile.am:
+	* src/Makefile.am:
+	* src/bml.c:
+	  Use pkgdir for dlopened libraries.
+
 2010-03-30  Stefan Kost  <ensonic@users.sf.net>
 
 	* configure.ac:
